DateTime CSS fix: align empty fields (#901).
The Month/Day/Year field are properly aligned also if a field is left empty.

See #901

--- a/modules/dm4-datetime/src/main/resources/web/style/datetime.css
+++ b/modules/dm4-datetime/src/main/resources/web/style/datetime.css
@@ -4,6 +4,7 @@
 .dm4\.datetime\.date .dm4\.datetime\.day,
 .dm4\.datetime\.date .dm4\.datetime\.year {
     display: inline-block;
+    vertical-align: top;
 }
 
 .dm4\.datetime\.date .dm4\.datetime\.day,
@@ -29,6 +30,7 @@
 .dm4\.datetime\.time .dm4\.datetime\.hour,
 .dm4\.datetime\.time .dm4\.datetime\.minute {
     display: inline-block;
+    vertical-align: top;
 }
 
 .dm4\.datetime\.time .dm4\.datetime\.minute {
